--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body
+		class="bg-slate-50 text-slate-900 selection:bg-violet-500 selection:text-white dark:bg-slate-900 dark:text-slate-50"
+		data-sveltekit-preload-data="hover"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
